# precog

./: .gitignore  README.md
c/: LICENSE  Makefile.am  README.md  configure.ac  prebuild.sh  regen.sh
c/src/: Makefile.am  hash.c  hash.h  makedir.c  makedir.h  vindex.c  vindex.h  voltaire.c  voltaire.h
c/tests/: Makefile.am  hash_test.c  hash_test.h  vindex_test.c  vindex_test.h
python/: README.md  vindex.py  vindex_test.py
