AM_CFLAGS = -Wall -Wextra -pedantic -Wshadow -Wpointer-arith -Wcast-align \
            -Wwrite-strings -Wmissing-prototypes -Wmissing-declarations   \
            -Wredundant-decls -Wnested-externs -Winline -Wno-long-long    \
            -Wconversion -Wstrict-prototypes -g -O0 -I/usr/local/include
AM_CFLAGS = -Wall -g -I/usr/local/include
lib_LIBRARIES = libvoltaire.a
include_HEADERS = vindex.h
libvoltaire_a_SOURCES = vindex.c vindex.h hash.c hash.h
